2019-09-12  Alessio Placitelli <alessio.placitelli@gmail.com>
Tweak group and metric names and spacing.

--- a/toolkit/components/telemetry/geckoview/streaming/metrics.yaml
+++ b/toolkit/components/telemetry/geckoview/streaming/metrics.yaml
@@ -2,123 +2,9 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-# This file defines the metrics that are recorded by the Glean SDK. They are
-# automatically converted to platform-specific code at build time using the
-# `glean_parser` PyPI package.
-
 $schema: moz://mozilla.org/schemas/glean/metrics/1-0-0
 
 performance.navigation:
-  time_to_non_blank_paint:
-    type: timing_distribution
-    time_unit: millisecond
-    gecko_datapoint: TIME_TO_NON_BLANK_PAINT_MS
-    description: |
-      The time between navigation start and the first non-blank paint of a foreground root content document, in milliseconds. This only records documents that were in an active docshell throughout the whole time between navigation start and non-blank paint. The non-blank paint timestamp is taken during display list building and does not include rasterization or compositing of that paint.
-    bugs:
-      - 1307242
-      - 1489524
-    data_reviews:
-      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
-    notification_emails:
-      - telemetry-performance-dev@mozilla.com
-    expires: "2020-12-01"
-  time_to_dom_interactive_ms:
-    type: timing_distribution
-    time_unit: millisecond
-    gecko_datapoint: TIME_TO_DOM_INTERACTIVE_MS
-    description: |
-      Time in milliseconds from navigationStart to domInteractive.
-    bugs:
-      - 1344893
-      - 1489524
-    data_reviews:
-      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
-    notification_emails:
-      - telemetry-performance-dev@mozilla.com
-    expires: "2020-12-01"
-  time_to_dom_content_loaded_start_ms:
-    type: timing_distribution
-    time_unit: millisecond
-    gecko_datapoint: TIME_TO_DOM_CONTENT_LOADED_START_MS
-    description: |
-      Time in milliseconds from navigationStart to domContentLoadedEventStart.
-    bugs:
-      - 1344893
-    data_reviews:
-      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
-    notification_emails:
-      - telemetry-performance-dev@mozilla.com
-    expires: "2020-12-01"
-  time_to_dom_content_loaded_end_ms:
-    type: timing_distribution
-    time_unit: millisecond
-    gecko_datapoint: TIME_TO_DOM_CONTENT_LOADED_END_MS
-    description: |
-      Time in milliseconds from navigationStart to domContentLoadedEventEnd.
-    bugs:
-      - 1344893
-      - 1489524
-    data_reviews:
-      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
-    notification_emails:
-      - telemetry-performance-dev@mozilla.com
-    expires: "2020-12-01"
-  time_to_dom_complete_ms:
-    type: timing_distribution
-    time_unit: millisecond
-    gecko_datapoint: TIME_TO_DOM_COMPLETE_MS
-    description: |
-      Time in milliseconds from navigationStart to domComplete.
-    bugs:
-      - 1344893
-      - 1489524
-    data_reviews:
-      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
-    notification_emails:
-      - telemetry-performance-dev@mozilla.com
-    expires: "2020-12-01"
-  time_to_load_event_start_ms:
-    type: timing_distribution
-    time_unit: millisecond
-    gecko_datapoint: TIME_TO_LOAD_EVENT_START_MS
-    description: |
-      Time in milliseconds from navigationStart to loadEventStart.
-    bugs:
-      - 1344893
-    data_reviews:
-      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
-    notification_emails:
-      - telemetry-performance-dev@mozilla.com
-    expires: "2020-12-01"
-  time_to_load_event_end_ms:
-    type: timing_distribution
-    time_unit: millisecond
-    gecko_datapoint: TIME_TO_LOAD_EVENT_END_MS
-    description: |
-      Time in milliseconds from navigationStart to loadEventEnd.
-    bugs:
-      - 1344893
-      - 1489524
-    data_reviews:
-      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
-    notification_emails:
-      - telemetry-performance-dev@mozilla.com
-    expires: "2020-12-01"
-  time_to_response_start_ms:
-    type: timing_distribution
-    time_unit: millisecond
-    gecko_datapoint: TIME_TO_RESPONSE_START_MS
-    description: |
-      Time in milliseconds from navigationStart to responseStart.
-    bugs:
-      - 1344893
-      - 1489524
-    data_reviews:
-      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
-    notification_emails:
-      - telemetry-performance-dev@mozilla.com
-    expires: "2020-12-01"
   bfcache_page_restored:
     type: custom_distribution
     range_min: 0
@@ -137,45 +23,7 @@ performance.navigation:
     notification_emails:
       - telemetry-performance-dev@mozilla.com
     expires: "2020-12-01"
-  gv_page_load_progress_ms:
-    type: timing_distribution
-    time_unit: millisecond
-    gecko_datapoint: GV_PAGE_LOAD_PROGRESS_MS
-    description: |
-      Time in milliseconds between page load progress start (0) and completion (100).
-    bugs:
-      - 1499418
-    data_reviews:
-      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
-    notification_emails:
-      - telemetry-performance-dev@mozilla.com
-    expires: "2020-12-01"
-  gv_page_load_ms:
-    type: timing_distribution
-    time_unit: millisecond
-    gecko_datapoint: GV_PAGE_LOAD_MS
-    description: |
-      Time taken to load a page in ms. This includes all static contents, no dynamic content. Loading of about: pages is not counted.
-    bugs:
-      - 1499418
-    data_reviews:
-      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
-    notification_emails:
-      - telemetry-performance-dev@mozilla.com
-    expires: "2020-12-01"
-  gv_page_reload_ms:
-    type: timing_distribution
-    time_unit: millisecond
-    gecko_datapoint: GV_PAGE_RELOAD_MS
-    description: |
-      Time taken to reload a page in ms. This includes all static contents, no dynamic content. Loading of about: pages is not counted.
-    bugs:
-      - 1549519
-    data_reviews:
-      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
-    notification_emails:
-      - telemetry-performance-dev@mozilla.com
-    expires: "2020-12-01"
+
   total_content_page_load_time:
     type: timing_distribution
     time_unit: millisecond
@@ -189,6 +37,169 @@ performance.navigation:
     notification_emails:
       - telemetry-performance-dev@mozilla.com
     expires: "2020-12-01"
+
+performance.navigation.time:
+  to_non_blank_paint:
+    type: timing_distribution
+    time_unit: millisecond
+    gecko_datapoint: TIME_TO_NON_BLANK_PAINT_MS
+    description: |
+      The time between navigation start and the first non-blank paint of a foreground root content document, in milliseconds. This only records documents that were in an active docshell throughout the whole time between navigation start and non-blank paint. The non-blank paint timestamp is taken during display list building and does not include rasterization or compositing of that paint.
+    bugs:
+      - 1307242
+      - 1489524
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
+    notification_emails:
+      - telemetry-performance-dev@mozilla.com
+    expires: "2020-12-01"
+
+  to_dom_interactive:
+    type: timing_distribution
+    time_unit: millisecond
+    gecko_datapoint: TIME_TO_DOM_INTERACTIVE_MS
+    description: |
+      Time in milliseconds from navigationStart to domInteractive.
+    bugs:
+      - 1344893
+      - 1489524
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
+    notification_emails:
+      - telemetry-performance-dev@mozilla.com
+    expires: "2020-12-01"
+
+  to_dom_content_loaded_start:
+    type: timing_distribution
+    time_unit: millisecond
+    gecko_datapoint: TIME_TO_DOM_CONTENT_LOADED_START_MS
+    description: |
+      Time in milliseconds from navigationStart to domContentLoadedEventStart.
+    bugs:
+      - 1344893
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
+    notification_emails:
+      - telemetry-performance-dev@mozilla.com
+    expires: "2020-12-01"
+
+  to_dom_content_loaded_end:
+    type: timing_distribution
+    time_unit: millisecond
+    gecko_datapoint: TIME_TO_DOM_CONTENT_LOADED_END_MS
+    description: |
+      Time in milliseconds from navigationStart to domContentLoadedEventEnd.
+    bugs:
+      - 1344893
+      - 1489524
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
+    notification_emails:
+      - telemetry-performance-dev@mozilla.com
+    expires: "2020-12-01"
+
+  to_dom_complete:
+    type: timing_distribution
+    time_unit: millisecond
+    gecko_datapoint: TIME_TO_DOM_COMPLETE_MS
+    description: |
+      Time in milliseconds from navigationStart to domComplete.
+    bugs:
+      - 1344893
+      - 1489524
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
+    notification_emails:
+      - telemetry-performance-dev@mozilla.com
+    expires: "2020-12-01"
+
+  to_load_event_start:
+    type: timing_distribution
+    time_unit: millisecond
+    gecko_datapoint: TIME_TO_LOAD_EVENT_START_MS
+    description: |
+      Time in milliseconds from navigationStart to loadEventStart.
+    bugs:
+      - 1344893
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
+    notification_emails:
+      - telemetry-performance-dev@mozilla.com
+    expires: "2020-12-01"
+
+  to_load_event_end:
+    type: timing_distribution
+    time_unit: millisecond
+    gecko_datapoint: TIME_TO_LOAD_EVENT_END_MS
+    description: |
+      Time in milliseconds from navigationStart to loadEventEnd.
+    bugs:
+      - 1344893
+      - 1489524
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
+    notification_emails:
+      - telemetry-performance-dev@mozilla.com
+    expires: "2020-12-01"
+
+  to_response_start:
+    type: timing_distribution
+    time_unit: millisecond
+    gecko_datapoint: TIME_TO_RESPONSE_START_MS
+    description: |
+      Time in milliseconds from navigationStart to responseStart.
+    bugs:
+      - 1344893
+      - 1489524
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
+    notification_emails:
+      - telemetry-performance-dev@mozilla.com
+    expires: "2020-12-01"
+
+performance.navigation.gv:
+  page_load_progress:
+    type: timing_distribution
+    time_unit: millisecond
+    gecko_datapoint: GV_PAGE_LOAD_PROGRESS_MS
+    description: |
+      Time in milliseconds between page load progress start (0) and completion (100).
+    bugs:
+      - 1499418
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
+    notification_emails:
+      - telemetry-performance-dev@mozilla.com
+    expires: "2020-12-01"
+
+  page_load:
+    type: timing_distribution
+    time_unit: millisecond
+    gecko_datapoint: GV_PAGE_LOAD_MS
+    description: |
+      Time taken to load a page in ms. This includes all static contents, no dynamic content. Loading of about: pages is not counted.
+    bugs:
+      - 1499418
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
+    notification_emails:
+      - telemetry-performance-dev@mozilla.com
+    expires: "2020-12-01"
+
+  page_reload:
+    type: timing_distribution
+    time_unit: millisecond
+    gecko_datapoint: GV_PAGE_RELOAD_MS
+    description: |
+      Time taken to reload a page in ms. This includes all static contents, no dynamic content. Loading of about: pages is not counted.
+    bugs:
+      - 1549519
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1529352
+    notification_emails:
+      - telemetry-performance-dev@mozilla.com
+    expires: "2020-12-01"
+
 performance.interaction:
   keypress_present_latency:
     type: timing_distribution
@@ -203,7 +214,8 @@ performance.interaction:
     notification_emails:
       - telemetry-performance-dev@mozilla.com
     expires: "2020-12-01"
-  fx_tab_switch_composite_e10s_ms:
+
+  tab_switch_composite:
     type: timing_distribution
     time_unit: millisecond
     gecko_datapoint: FX_TAB_SWITCH_COMPOSITE_E10S_MS
@@ -217,8 +229,9 @@ performance.interaction:
     notification_emails:
       - telemetry-performance-dev@mozilla.com
     expires: "2020-12-01"
+
 network:
-  network_cache_v2_hit_time_ms:
+  cache_v2_hit_time:
     type: timing_distribution
     time_unit: millisecond
     gecko_datapoint: NETWORK_CACHE_V2_HIT_TIME_MS
@@ -231,7 +244,8 @@ network:
     notification_emails:
       - telemetry-performance-dev@mozilla.com
     expires: "2020-12-01"
-  network_cache_size:
+
+  cache_size: <-- THIS is wrong - size can't be a timing distribution.
     type: timing_distribution
     time_unit: millisecond
     gecko_datapoint: NETWORK_CACHE_SIZE
